shadow area fixed and comment icons nowrap

--- a/css/best.css
+++ b/css/best.css
@@ -9,21 +9,6 @@
 .best__content {
     flex: 1;
 }
-/*.best__content:not(:last-child) {*/
-/*    margin-right: 10px;*/
-
-/*}*/
-/* .best__wrapper span {
-   font-family: 'Inter', sans-serif;
-   display: block;
-   text-transform: uppercase;
-   margin-bottom: 4px;
-   background-color: rgb(238, 238, 238);
-   border-bottom: 1px solid rgb(153, 153, 153);
-   padding: 5px 10px;
-} */
-
-/* стили для таблиц - это боооооооооль =(((( */
 .best__table {
     color: rgb(153, 153, 153);
 }
